--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^18.11.7",
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
+    "bootstrap": "^5.2.2",
     "classnames": "^2.3.2",
     "formik": "^2.2.9",
     "react": "^18.2.0",
